--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,14 @@
         "laravel/passport": "^9.3",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "phpmailer/phpmailer": "^6.1",
         "yajra/laravel-datatables-oracle": "^9.10"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
+        "mpociot/laravel-apidoc-generator": "^4.8",
         "nunomaduro/collision": "^4.1",
         "phpunit/phpunit": "^8.5"
     },
