--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "phpmailer/phpmailer": "^6.1",
+        "phpunit/phpunit": "^8.5",
         "yajra/laravel-datatables-oracle": "^9.10"
     },
     "require-dev": {
@@ -25,8 +26,7 @@
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "mpociot/laravel-apidoc-generator": "^4.8",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "nunomaduro/collision": "^4.1"
     },
     "config": {
         "optimize-autoloader": true,
